Fix: Hero section mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,3 +65,45 @@ header{
 .hero-column button{
     margin-top: 34px;
 }
+
+
+@media (max-width: 476px){
+    header{
+        background: url("../../assets/img/Rectangle\ 2.png") no-repeat center center/cover;
+        height: 705px;
+    }
+
+    .hero-column{
+        background: url("../../assets/img/iPhone\ XS\ Longscroll\ Mockup\ 1.png") no-repeat right center/contain;
+        padding-top: 28%;
+        margin-right: -40%;
+        padding-bottom: 50%;
+        margin-left: 2%;
+    }
+
+    /* .hero-column > h1, .hero-column > p, .hero-column > button{
+        margin-top: -34px;
+    } */
+    
+    .hero-text{
+        color: white;
+        font-size: 36px;
+        font-weight: bold;
+        line-height: 42px;
+    }
+    
+    .outline-hero-text{
+        color: transparent;
+        -webkit-text-stroke: 2px white;
+    }
+    
+    .hero-paragraph{
+        width: 180px;
+        font-size: 16px;
+        line-height: 28px;
+    }
+    
+    .hero-column button{
+        margin-top: 24px;
+    }
+}
